--- a/info.yaml
+++ b/info.yaml
@@ -5,8 +5,8 @@ wokwi_id:    0        # If using wokwi, set this to your project's ID
 
 # If using an HDL, set wokwi_id as 0 and uncomment and list your source files here. 
 # Source files must be in ./src and you must list each source file separately
-#  source_files:        
-#    - counter.v
+  source_files:        
+    - tt_um_himanshu5_prog_computeUnit.v
 #    - decoder.v
 top_module:  "tt_um_himanshu5_prog_computeUnit"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
