--- a/info.yaml
+++ b/info.yaml
@@ -24,7 +24,7 @@ documentation:
   author:       "Himanshu Yadav"      # Your name
   title:        "1x1"      # Project title
   language:     "Verilog" # other examples include Verilog, Amaranth, VHDL, etc
-  description:  ""      # Short description of what your project does
+  description:  "ComputeUnit implementation"      # Short description of what your project does
 
 # Longer description of how the project works. You can use standard markdown format.
   how_it_works: |
