--- a/info.yaml
+++ b/info.yaml
@@ -8,13 +8,12 @@ project:
   source_files:        
     - computeUnit_0.v
     - computeUnit_1.v
-    - computeUnit_2.v
     - tt_um_chiptop.v
 #    - decoder.v
-  top_module:  "tt_um_chipTop"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
+  top_module:  "tt_um_himanshu5_prog_chipTop"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
 # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "2x2"    # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2 or 8x2
+  tiles: "1x2"    # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2 or 8x2
 
 # Keep a track of the submission yaml
 yaml_version: 4
