--- a/info.yaml
+++ b/info.yaml
@@ -13,7 +13,7 @@ project:
   top_module:  "tt_um_himanshu5_prog_chipTop"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
 # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "1x1"    # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2 or 8x2
+  tiles: "1x2"    # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2 or 8x2
 
 # Keep a track of the submission yaml
 yaml_version: 4
@@ -36,7 +36,8 @@ documentation:
 # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
   how_to_test:  |
     Reset needs to be 0 to make design go to reset mode and then set reset to 1 and ena to 1 to shift the design to 
-    functional mode.
+    functional mode. I tested my design on EDA playground by creating testbench there. Testbench and design files are
+    there in test/ directory.
 
 # A description of what the inputs do (e.g. red button, SPI CLK, SPI MOSI, etc).
   inputs:               
